--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ node_js:
   - "0.10"
 install:
   - npm install
+  - npm install bower
   - bower install
 before_script:
   - "export DISPLAY=:99.0"
