--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/dwatson62/todo_challenge#readme",
   "devDependencies": {
+    "http-server": "^0.8.0",
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^0.11.2",
     "jasmine-core": "^2.3.4",
