--- a/package.json
+++ b/package.json
@@ -4,8 +4,20 @@
   "description": "ToDo Challange =======================",
   "main": "index.js",
   "scripts": {
+    "postinstall": "bower install",
+
+    "prestart": "npm install",
+    "start": "http-server -a localhost -p 8000 -c-1",
+
+    "pretest": "npm install",
     "test": "karma start test/karma.conf.js",
-    "start": "protractor test/e2e/conf.js"
+    "test-single-run": "karma start karma.conf.js  --single-run",
+
+    "preupdate-webdriver": "npm install",
+    "update-webdriver": "webdriver-manager update",
+
+    "preprotractor": "npm run update-webdriver",
+    "protractor": "protractor test/e2e/conf.js"
   },
   "repository": {
     "type": "git",
