--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,10 @@ before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - npm start > /dev/null &
-  - npm run update-webdriver
+  - webdriver-manager update
   - sleep 3
 script:
-  - node_modules/.bin/karma start karma.conf.js --no-auto-watch --single-run --reporters=dots --browsers=Firefox
-  - node_modules/.bin/protractor e2e-tests/protractor.conf.js --browser=firefox
+  - npm test --single-run
+  - webdriver-manager start
+  - http-server
+  - npm start
