--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "jquery": "~2.1.4",
     "bootstrap": "~3.3.4",
-    "angular": "~1.4.0",
+    "angular": "~1.4.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0",
