--- a/package.json
+++ b/package.json
@@ -1,32 +1,27 @@
 {
   "name": "todo_challenge",
-  "version": "1.0.0",
-  "description": "ToDo Challange =======================",
-  "main": "index.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "karma start test/karma.conf.js",
-    "start": "protractor test/e2e/conf.js"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/dwatson62/todo_challenge.git"
+  "dependencies": {
+    "body-parser": "~1.12.4",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "ejs": "^2.3.3",
+    "express": "~4.12.4",
+    "jade": "~1.9.2",
+    "morgan": "~1.5.3",
+    "serve-favicon": "~2.2.1"
   },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/dwatson62/todo_challenge/issues"
-  },
-  "homepage": "https://github.com/dwatson62/todo_challenge#readme",
   "devDependencies": {
-    "http-server": "^0.8.0",
-    "grunt": "^0.4.5",
-    "grunt-contrib-jshint": "^0.11.2",
-    "jasmine-core": "^2.3.4",
-    "karma": "^0.12.36",
-    "karma-chrome-launcher": "^0.1.12",
-    "karma-jasmine": "^0.3.5",
+    "karma": "^0.13.0",
+    "karma-chrome-launcher": "^0.2.0",
+    "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.0",
     "phantomjs": "^1.9.17",
-    "protractor": "^2.1.0"
+    "protractor": "^2.1.0",
+    "webdriver-manager": "^6.0.2"
   }
 }
