--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,13 @@ node_js:
   - "0.10"
 install:
   - npm install
-  - npm install bower
   - bower install
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - npm start > /dev/null &
+  - webdriver-manager update
   - sleep 3
 script:
   - npm test --single-run
+  - node_modules/.bin/protractor ./test/e2e/protractor.conf.js --browser=firefox
