--- a/package.json
+++ b/package.json
@@ -3,7 +3,16 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "postinstall": "bower install",
+    "prestart": "npm install",
+    "start": "http-server -a localhost -p 3000 -c-1",
+    "pretest": "npm install",
+    "test": "karma start ./test/karma.conf.js",
+    "test-single-run": "karma start ./test/karma.conf.js  --single-run",
+    "preupdate-webdriver": "npm install",
+    "update-webdriver": "webdriver-manager update",
+    "preprotractor": "npm run update-webdriver",
+    "protractor": "protractor ./test/e2e/protractor.conf.js"
   },
   "dependencies": {
     "body-parser": "~1.12.4",
