--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "~4.12.4"
   },
   "devDependencies": {
+    "bower": "^1.4.1",
     "karma": "^0.13.0",
     "karma-chrome-launcher": "^0.2.0",
     "karma-jasmine": "^0.3.6",
