--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ before_script:
   - sleep 3
 script:
   - npm test --single-run
-  - node_modules/.bin/protractor ./test/e2e/protractor.conf.js --browser=firefox
+  - node_modules/.bin/protractor ./test/e2e/conf.js --browser=firefox
